  date.
- Add image and css files (inprogress.gif, logo.gif and style.css).
- Add .codeclimate.yml.
- Some terms of "new", "load", "edit" replaced to CRUD words "create", "read", "update".
  But all original terms are still available.
- Output an error message when after a failed upload due to a server side error.
- [SECURITY FIX] Update FileUploader.php to prevent move_uploaded_file() NULL byte injection in
  file name (CVE-2015-2348) for PHP 5.2.x and PHP 5.3.x (CVE-2015-2348 was fixed in PHP 5.4.39,
  PHP 5.5.23 and PHP 5.6.7).
- [BUG FIX] The definition file editor supports the 'soft-delete' key, and also the field which
  can't contain ether boolean or string value appropriately.
- [BUG FIX] The definition file editor supports the 'pusher-app_id', 'pusher-key' and
  'pusher-secret' keys and send-mail settings etc.
- [BUG FIX] Fix other issues of the definition file editor.
- [BUG FIX] Fix an error when the value of 'operator' key in 'query' key is '=' in a definition
  file using FileMaker Server.
- [BUG FIX] Calculation bug fixed. In case of multiple uses of a calculated property.
- [BUG FIX] Fix 'inline' and 'end-of-sibling' key options of validation. The affected version is
  5.1 only.
- [BUG FIX] A term of the "send-mail" in DefinitionChecker class was wrong.
- [BUG FIX] Some value in the Local Context weren't archived.
- [BUG FIX] Parser had a bug for multiple references in a page.
- [BUG FIX] PDO class had a bug for authentication but it would affect in a rare case.
- [BUG FIX] Fix inserting data including null character to the database when using FileMaker Server.
- [BUG FIX] Post Only Mode and Validation work fine.
- [BUG FIX] Fix showing an image of FileMaker's container field if the value of "src" attribute in
  the page file includes "?media=". The affected version is 5.1 only.
- [BUG FIX] Fix loading English MessageStrings class when the value of Accept-Language request header
  includes 'ja'.